# ns-usbloader-rs

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  LICENSE-MIT  README.md  capture.pcapng  cliff.toml  dist-workspace.toml  prek.toml  release.toml  slop-review.md
.github/workflows/: docker.yml  release-cli.yml  release-gui.yml  release.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: main.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: lib.rs  network.rs  paths.rs  rcm.rs  usb.rs
core/src/usb/: nusb_backend.rs  rusb_backend.rs  sphaira.rs  tinfoil.rs
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
gui/: Cargo.toml  build.rs
gui/src/: app.rs  main.rs  tabs.rs
gui/src/tabs/: home.rs  install.rs  network.rs  rcm.rs  usb.rs
gui/wix/: main.wxs
media/: banner-dark.typ  banner-light.typ  demo.tape
src/: main.rs
website/: zola.toml
website/content/: _index.md
website/static/: style.css
website/templates/: base.html  index.html
