[workspace]
resolver = "3"
members = [
  "cli",
  "core",
  "gui",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sermuns/ironfoil"
authors = ["sermuns <sermuns@lysator.liu.se>"]

[workspace.dependencies]
log = "0.4"
color-eyre = "0.6"
env_logger = "0.11"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
uninlined_format_args.level = "allow"
trivially_copy_by_ref.level = "deny"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
