[workspace]
resolver = "3"
members = [
  "cli",
  "core",
  "gui",
]

[workspace.package]
version = "0.4.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sermuns/ironfoil"
authors = ["sermuns <sermuns@lysator.liu.se>"]

[workspace.dependencies]
log = "0.4"
color-eyre = "0.6"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
uninlined_format_args.level = "allow"
trivially_copy_pass_by_ref.level = "deny"
items_after_statements = "allow"
cast_possible_truncation = "allow" # i mean we all have 64-bit PCs, right????
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
cast_precision_loss = "allow"
too_many_arguments = "allow"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = false

[profile.dist]
inherits = "release"
