[package]
name = "ironfoil"
description = "Transfer to Awoo installer from the command-line"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
ironfoil-core = { path = "../core", version = "0.1.5" }
color-eyre.workspace = true
