[package]
name = "ironfoil"
description = "Transfer to NS title installers from the command-line"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.dist]
dist = false

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre.workspace = true
env_logger.workspace = true
ironfoil-core = { path = "../core", version = "0.4.4" }
indicatif = "0.18"
