[package]
name = "ironfoil-core"
description = "Core library for ironfoil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
thiserror = "1"
percent-encoding = "2.3"
color-eyre.workspace = true
walkdir = "2"
crc32c = "0.6"
crc32fast = "1.5"

[target.'cfg(windows)'.dependencies]
rusb = "0.9"

[target.'cfg(not(windows))'.dependencies]
nusb = "0.2"
