[package]
name = "ironfoil-core"
description = "Core library for ironfoil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
log.workspace = true
nusb = "0.2"
thiserror = "1"
percent-encoding = "2.3"
color-eyre.workspace = true
walkdir = "2"
crc32c = "0.6"
serde.workspace = true
