[package]
name = "ironfoil-core"
description = "Core library for ironfoil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true
log.workspace = true
thiserror = "2"
walkdir = "2"

# network
percent-encoding = { version = "2.3", optional = true }

# usb
crc32c = { version = "0.6", optional = true }
nusb = { version = "0.2", optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rstest = "0.26"

[features]
default = ["network", "rcm", "usb"]
network = ["dep:percent-encoding"]
rcm = ["dep:nusb"]
usb = ["dep:crc32c", "dep:nusb", "dep:serde"]
