[package]
name = "ironfoil-gui"
description = "GUI for ironfoil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.wix]
upgrade-guid = "5A95C071-0E6C-4A6E-9553-4817DC6B8164"
path-guid = "6E6AD6BA-08A7-4AB3-B49A-E7E3B9050319"
license = false
eula = false
product-icon = "../media/icon-dark.ico"

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["svg"] }
egui-toast = "0.19"
env_logger.workspace = true
ironfoil-core = { path = "../core", version = "0.4.0" }
log.workspace = true
serde.workspace = true
strum = { version = "0.28", features = ["derive"] }
rfd = "0.17"
humansize = "2.1.3"
image = { version = "0.25", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "x11",
    "wayland"
] }

[build-dependencies]
vergen-gitcl  = "9.1.0"
