[package]
name = "ironfoil-gui"
description = "GUI for ironfoil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true
eframe = { workspace = true, features = ["default_fonts", "glow", "persistence"] }
egui = "0.34"
egui_extras = { workspace = true, features = ["svg"] }
egui-toast = "0.19"
env_logger.workspace = true
ironfoil-core = { path = "../core", version = "0.4.4" }
log.workspace = true
serde.workspace = true
strum = { workspace = true, features = ["derive"] }
rfd = "0.17"
humansize = "2"
image.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { workspace = true, features = ["default_fonts", "glow", "persistence", "x11", "wayland"] }

[build-dependencies]
vergen-gitcl.workspace = true
